[package]
name = "web-classify"
version = "0.1.0"
authors = ["Babis Chalios <mail@bchalios.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2"
parking_lot = "0.10.0"
bytes = "0.5.6"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["macros"] }
vaccel-bindings = { git = "https://github.com/bchalios/vaccel-bindings", branch = "master" }
