[package]
name = "web-classify"
version = "0.1.0"
authors = ["Babis Chalios <mail@bchalios.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
futures = "0.3"
bytes = "0.5.6"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["macros"] }
vaccel-bindings = { git = "https://github.com/bchalios/vaccel-bindings", branch = "master" }
ascii = "1"
hostname = "^0.3"
log = "0.4"
pretty_env_logger = "0.4"
